--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <h4>Cheese Burger</h4>
                     <p class="food-price">Starts &#8377;52</p>
                     <p class="food-detail">
-                        Real cheese burger made with Indian and Italian Sauce Mixture, Chicken, and organic vegetables.
+                        Real cheese burger made with Indian and Italian Sauce Mixture and vegetables
                     </p>
                     <br>
 
@@ -246,7 +246,7 @@
 
                 <div class="food-menu-desc">
                     <h4>Ice Creams</h4>
-                    <p class="food-price">$2.3</p>
+                    <p class="food-price">&#8377;55</p>
                     <p class="food-detail">
                         Fresh Ice Creams are available with different flavoured Artificial & Non-Artificial
                     </p>
