--- a/foods.html
+++ b/foods.html
@@ -68,10 +68,10 @@
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Burgers</h4>
+                    <p class="food-price">Starts &#8377;45</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Real cheese burger made with Indian Style
                     </p>
                     <br>
 
@@ -81,14 +81,14 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="menu-burger.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Smoky Burger</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Pizzas</h4>
+                    <p class="food-price">Starts &#8377;278</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Made with Italian Sauce, Fresh addies, Chicken, and more to enjoy
                     </p>
                     <br>
 
@@ -98,14 +98,14 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="cafe burger.jpg" alt="Chicke Hawain Burger" class="img-responsive img-curve">
+                    <img src="Ffries.jpg" alt="fries" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Nice Burger</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>French Fries</h4>
+                    <p class="food-price">Starts &#8377;45</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Made with French Style and Fresh Potatoes
                     </p>
                     <br>
 
@@ -115,14 +115,14 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="Picsart_22-07-27_15-17-27-218.jpg" alt="cakes" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Cakes</h4>
+                    <p class="food-price">Starts &#8377;325</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Fresh Cakes, Puddings, Pastries and more
                     </p>
                     <br>
 
@@ -132,14 +132,14 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="menu-pizza.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
+                    <img src="Picsart_22-07-27_16-57-33-720.jpg" alt="Chicke Hawain Pizza" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Food Title</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Momos</h4>
+                    <p class="food-price">Starts &#8377;72</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Fresh steamed and baked momos with extra tastes
                     </p>
                     <br>
 
@@ -149,14 +149,14 @@
 
             <div class="food-menu-box">
                 <div class="food-menu-img">
-                    <img src="menu-momo.jpg" alt="Chicke Hawain Momo" class="img-responsive img-curve">
+                    <img src="Picsart_22-07-27_15-20-08-639.jpg" alt="coffee" class="img-responsive img-curve">
                 </div>
 
                 <div class="food-menu-desc">
-                    <h4>Chicken Steam Momo</h4>
-                    <p class="food-price">$2.3</p>
+                    <h4>Black Coffee & Latty</h4>
+                    <p class="food-price">Starts &#8377;275</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Fresh variety coffee(Black & Normal) and Cold Iced Coffee
                     </p>
                     <br>
 
@@ -171,9 +171,9 @@
 
                 <div class="food-menu-desc">
                     <h4>Tasty Latte</h4>
-                    <p class="food-price">$2.3</p>
+                    <p class="food-price">Starts &#8377;108</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Extra sweet and tasty with Pure milk and fine arts
                     </p>
                     <br>
 
@@ -188,9 +188,9 @@
 
                 <div class="food-menu-desc">
                     <h4>Iced Coffee</h4>
-                    <p class="food-price">$2.3</p>
+                    <p class="food-price">Starts &#8377;45</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        Fresh Ice Coffees and Ice creams are available with sweetness
                     </p>
                     <br>
 
@@ -205,9 +205,9 @@
 
                 <div class="food-menu-desc">
                     <h4>Bevarages</h4>
-                    <p class="food-price">$2.3</p>
+                    <p class="food-price">Starts &#8377;35</p>
                     <p class="food-detail">
-                        Made with Italian Sauce, Chicken, and organice vegetables.
+                        More food to explore Fast food, Junk Food, and other bevarages are available
                     </p>
                     <br>
 
