--- a/categories.html
+++ b/categories.html
@@ -172,7 +172,7 @@
 
             <a href="#">
             <div class="box-3 float-container">
-                <img src="images/momo.jpg" alt="Momo" class="img-responsive img-curve">
+                <img src="momo.jpg" alt="Momo" class="img-responsive img-curve">
 
                 <h3 class="float-text text-white">Momo</h3>
             </div>
