--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     <a href="#"><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/></a>
                 </li>
                 <li>
-                    <a href="#"><img src="https://img.icons8.com/fluent/48/000000/twitter.png"/></a>
+                    <a href="https://twitter.com/PRATULBAGGHAR5"><img src="https://img.icons8.com/fluent/48/000000/twitter.png"/></a>
                 </li>
             </ul>
         </div>
