--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                     <a href="#"><img src="https://img.icons8.com/fluent/50/000000/facebook-new.png"/></a>
                 </li>
                 <li>
-                    <a href="#"><img src="https://img.icons8.com/fluent/48/000000/instagram-new.png"/></a>
+                    <a href="#"><img src="https://e7.pngegg.com/pngimages/125/937/png-clipart-youtube-logo-youtube-angle-logo-thumbnail.png"/></a>
                 </li>
                 <li>
                     <a href="https://twitter.com/PRATULBAGGHAR5"><img src="https://img.icons8.com/fluent/48/000000/twitter.png"/></a>
