--- a/categories.html
+++ b/categories.html
@@ -15,7 +15,7 @@
     <section class="navbar">
         <div class="container">
             <div class="logo">
-                <a href="https://pratulislive.github.io/Group69_Jovac_Project/" title="Logo">
+                <a href="https://pratulislive.github.io/Group69_Jovac_Project/index.html" title="Logo">
                     <img src="tea logo.png" alt="Restaurant Logo" class="img-responsive">
                 </a>
             </div>
