--- a/contactus.html
+++ b/contactus.html
@@ -51,7 +51,7 @@
     <section class="navbar">
         <div class="container1">
             <div class="logo">
-                <a href="#" title="Logo">
+                <a href="index.html" title="Logo">
                     <img src="tea logo.png" alt="Restaurant Logo" class="img-responsive">
                 </a>
             </div>
@@ -127,6 +127,7 @@
 
                                     </form>
                                     <a href="index.html"><button class="button">Submit</button></a>
+                                    <a href="index.html"><button class="button">Subscription</button></a>
 
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
