--- a/subscription.html
+++ b/subscription.html
@@ -1,1 +1,159 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <title>Subscribe Page</title>
+</head>
+
+<style>
+    .button {
+        border: none;
+        padding: 0.2rem 1rem;
+        font-size: 1rem;
+        border-radius: 2rem;
+        text-transform: uppercase;
+        background-color: #ff4757;
+        box-shadow: 0 8px 6px -6px #000;
+        outline: none;
+        margin-left: 38px;
+
+
+    }
+
+    .button:hover {
+        box-shadow: 0 8px 6px -6px rgb(103, 184, 206);
+    }
+
+    .container1 {
+        width: 80%;
+        margin: 0 auto;
+        padding: 1%;
+    }
+    .text-center{
+        color: #ff4757;
+    }
+    .vh-100{
+        margin-top: -23px;
+    }
+    .justify-content-center{
+        margin-top: -43px;
+    }
+</style>
+
+<body>
+    <section class="navbar">
+        <div class="container1">
+            <div class="logo">
+                <a href="index.html" title="Logo">
+                    <img src="tea logo.png" alt="Restaurant Logo" class="img-responsive">
+                </a>
+            </div>
+
+            <div class="menu text-right">
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="categories.html">Categories</a>
+                    </li>
+                    <li>
+                        <a href="foods.html">Foods</a>
+                    </li>
+                    <li>
+                        <a href="contactus.html">Contact</a>
+                    </li>
+                  <li>
+                        <a href="subscription.html">Subscribe</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="clearfix"></div>
+        </div>
+    </section>
+
+
+
+    <section class="vh-100" style="background-color: #eee;">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-lg-12 col-xl-11">
+                    <div class="card text-black" style="border-radius: 25px;">
+                        <div class="card-body p-md-5">
+                            <div class="row justify-content-center">
+                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Monthly Subscription</p>
+
+                                    <form class="mx-1 mx-md-4" action="/register" method="post">
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="text" class="form-control" placeholder="Your Name" value=""
+                                                    name="firstname" />
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="text" class="form-control" placeholder="E-mail" value=""
+                                                    name="firstname" />
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="text" class="form-control" placeholder="Phone" value=""
+                                                    name="firstname" />
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="text" class="form-control" placeholder="Create Password" value=""
+                                                    name="firstname" />
+                                            </div>
+                                        </div>
+
+                                      <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="text" class="form-control" placeholder="Confirm Password" value=""
+                                                    name="firstname" />
+                                            </div>
+                                        </div>
+                                        
+
+                                    </form>
+                                    
+                                    <a href="index.html"><button class="button">Payment</button></a>
+
+                                </div>
+                                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                                        class="img-fluid" alt="Sample image">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
+
+</html>
