--- a/foods.html
+++ b/foods.html
@@ -34,6 +34,9 @@
                     <li>
                         <a href="contactus.html">Contact</a>
                     </li>
+                    <li>
+                        <a href="subscription.html">Subscribe</a>
+                    </li>
                 </ul>
             </div>
 
