--- a/contactus.html
+++ b/contactus.html
@@ -70,6 +70,9 @@
                     <li>
                         <a href="#">Contact</a>
                     </li>
+                    <li>
+                        <a href="subscription.html">Subscribe</a>
+                    </li>
                 </ul>
             </div>
 
