--- a/contactus.html
+++ b/contactus.html
@@ -130,7 +130,7 @@
 
                                     </form>
                                     <a href="index.html"><button class="button">Submit</button></a>
-                                    <a href="index.html"><button class="button">Subscription</button></a>
+                                    <a href="subscription.html"><button class="button">Subscription</button></a>
 
                                 </div>
                                 <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
