--- a/subscription.html
+++ b/subscription.html
@@ -91,7 +91,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Monthly Subscription</p>
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">&#8377; Monthly Subscription</p>
 
                                     <form class="mx-1 mx-md-4" action="/register" method="post">
 
