--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         </div>
 
         <p class="text-center">
-            <a href="#">See All Foods</a>
+            <a href="categories.html">See All Foods</a>
         </p>
     </section>
     <!-- fOOD Menu Section Ends Here -->
