--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <!-- Important to make website responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title img src="tea logo.png">Restaurant Website</title>
+    <title img src="tea logo.png" alt="Restaurant Logo" class="img-responsive">Restaurant Website</title>
 
     <!-- Link our CSS file -->
     <link rel="stylesheet" href="style.css">
